Changes for 1.2.7
* Added a global property, "Capture Units On Entering Territory", which if true allows units to be captured instead of fighting. (veqryn)

* Added new player attachment, captureUnitOnEnteringBy, which will allow this player to let some of the units be captured when a territory is taken over. (veqryn)

* Added new territory attachment, captureUnitOnEnteringBy, which will allow units in the territory to be taken when the territory is captured. (veqryn)

* Added new unit attachment, canBeCapturedOnEnteringBy, which will allow a unit to be taken when the territory is captured. (veqryn)

* Changed Strategic Bombing to account for isSuicide units. Now isSuicide units will also die if they strategic bomb something. (veqryn)

* Fixed error unit display of unit graphics, where things that were _hit needed _it on the end instead of front, sometimes resulting in needing _it_hit_it, etc. (veqryn)

* Fixed null pointer in game data getNeighbors match. (veqryn)

* Updating default maps to use latest properties. (veqryn)

* Rewrote entire RulesAttachment.java so that territory conditions could use "count" with options like "original", "controlled", etc. (veqryn)

* Added new rule property option, "map", for use with Presence and Exclusion conditions. If used, it will return the entire map's territories. (veqryn)

* Made it so that jet power technology and super subs technology no longer affect units with zero attack and zero defense. (veqryn)

* Completely re-wrote checkUnitExclusions and Made unitPresence work with directExcludedTerritories, alliedExclusionTerritories, enemyExclusionTerritories, enemySurfaceExclusionTerritories. (veqryn)

* Added new rule property and condition/objective, "directExcludedTerritories", which applies to the attached player. (veqryn)

* Added new rule property and condition/objective, "unitPresence", as well as "directPresenceTerritories", "alliedPresenceTerritories", and "enemyPresenceTerritories". 